After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734641 - gdk_window_set_device_events() does not change the event mask for the window
gdk_window_set_device_events() does not change the event mask for the window
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-08-12 07:06 UTC by _bjd_
Modified: 2014-08-14 04:11 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description _bjd_ 2014-08-12 07:06:53 UTC
In gdk_x11_device_core_select_window_events(), a filter mask is created by the bitwise AND of all the device events. This creates a value of 0.

It should be the bitwise OR of all the device event masks.

This appears to be wrong in all GTK+-3 versions.